--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   font_awesome_flutter: ^8.10.0
   video_player:
   url_launcher:
+  html:
   # youtube_player_flutter: ^7.0.0+7
 
 
