--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,14 @@ dependencies:
   video_player:
   url_launcher:
   html:
+  firebase_auth: ^0.18.4+1
+  firebase_core: "0.5.3"
+  flutter_signin_button: ^1.0.0
+  google_sign_in: ^4.5.6
+
+  # state management
+  # provider: ^4.3.2+2
+
   # youtube_player_flutter: ^7.0.0+7
 
 
